# mysql-term-search

./: .env.sample  .gitignore  LICENSE  README.md  build.py  pyproject.toml  requirements.txt
mysql_text_search/: cli.py  search.py  settings.py
mysql_text_search/classes/: env_utility.py  match_types.py  version.py
