[project]
name = "mysql-text-search"
version = "1.1.0-dev"
description = "CLI tool to search text across all tables in a MySQL database"
requires-python = ">=3.12"
dependencies = [ "build==1.4.0", "mysql-connector-python==9.6.0", "packaging==26.0", "pyproject_hooks==1.2.0", "python-dotenv==1.2.1", "setuptools==82.0.0", "toml==0.10.2", "tqdm==4.67.3", "wheel==0.46.3",]

[project.scripts]
mysql-search = "mysql_text_search.cli:main"
